--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-﻿body
-{
+﻿﻿td {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    text-align: center;
+}
+.back-button{
+    background-color: antiquewhite;
+    border: 2px solid black;
+    width: 200px;
+    height: 55px;
+    text-align: center;
+    display: block;
+    margin-top: 100px;
+    color: black;
+    font-size: 16pt;
+
 }
