--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@
     font-size: 16pt;
 
 }
+.buttons {
+    background-color: #b7d2fb;
+    border: 2px solid black;
+    width: 300px;
+    height: 70px;
+    text-align: center;
+    display: block;
+    margin-top: 5px;
+    color: black;
+    font-size: 24pt;
+}
