--- a/style.css
+++ b/style.css
@@ -4,3 +4,25 @@
     border: 1px solid black;
     text-align:center;
 }
+.back-button {
+    background-color: antiquewhite;
+    border: 2px solid black;
+    width: 200px;
+    height: 55px;
+    text-align: center;
+    display: block;
+    margin-top: 100px;
+    color: black;
+    font-size: 16pt;
+}
+.buttons {
+    background-color: #b7d2fb;
+    border: 2px solid black;
+    width: 300px;
+    height: 70px;
+    text-align: center;
+    display: block;
+    margin-top: 5px;
+    color: black;
+    font-size: 24pt;
+}
