--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     border: 1px solid black;
     text-align:center;
 }
+table{
+    border-collapse:collapse;
+}
 canvas {
     border: 1px solid black;
 }
