--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿td {
+﻿td{
     width: 50px;
     height: 50px;
     border: 1px solid black;
@@ -16,6 +16,7 @@
     font-size: 16pt;
 
 }
+
 .buttons {
     background-color: #b7d2fb;
     border: 2px solid black;
@@ -26,4 +27,11 @@
     margin-top: 5px;
     color: black;
     font-size: 24pt;
+}
+
+#cl {
+    width: 400px;
+    height: 400px;
+    margin: 10px;
+    border: 1px solid black;
 }
