--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@
 }
 table{
     border-collapse:collapse;
+    background-color: white;
 }
 canvas {
     border: 1px solid black;
+    background-color: white;
+}
+h1{
+    color: white;
+
 }
 .back-button {
     background-color: antiquewhite;
@@ -45,4 +51,13 @@ footer {
     height: 400px;
     margin: 10px;
     border: 1px solid black;
+}
+body{
+    background-image: url(IMG_1849.jpg);
+    background-size: 120% auto;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+p{
+    color: white;
 }
